# Fits-Header-Extractor

./: INSTALL  README.md  activate  activate.sh  main_test.sh  pyproject.toml  requirements.txt
.ipynb_checkpoints/: exploration-checkpoint.ipynb
Source/: fits_header_extractor.py  main_test.py
Source/fits_header_extractor/: __init__.py
fits_header_extractor/: __init__.py  example.py  fits_header_extractor.py
fits_header_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
