# [TLP:RED] THIS PROJECT IS UNDER EMBARGO UNTIL 2025-01-13!
# FITS header extractor is a python library to extract the header of FITS.
#
# Author: Moussouni, Yaël (MSc student; yael.moussouni@etu.unistra.fr)
# Institution:  Université de Strasbourg, CNRS, Observatoire astronomique
#               de Strasbourg, UMR 7550, F-67000 Strasbourg, France
# Date: 2025-01-01
#
# Licence:
# Fits Header Extractor [and Curator With Python]
# Copyright (C) 2025 Yaël Moussouni (yael.moussouni@etu.unistra.fr)
#
# pyproject.toml
# Copyright (C) 2025 Yaël Moussouni (yael.moussouni@etu.unistra.fr)
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see https://www.gnu.org/licenses/.

[project]
name = "fits_header_extractor"
version = "1.0.2"
authors = [
  { name="Moussouni, Yaël", email="yael.moussouni@etu.unistra.fr" },
]
description = "Fits are widely used file formats in astronomy. The content of the file is in two parts: the header and the data. The goal of this package is to explore fits header."

readme = "README.md"
requires-python = ">=3.10"
classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Yael-II/Fits-Header-Extractor/"
Issues = "https://github.com/Yael-II/Fits-Header-Extractor/issues/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
